# CE1108_P

./: .gitignore  README.md
GUI/: GUI.pro  mainwindow.ui
build-GUI-Desktop-Debug/: GUI  Makefile  moc_mainwindow.cpp  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp
build-logotec-Desktop-Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-logotec-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-83d38338d72a4a3e9594.json  cmakeFiles-v1-baccddb727763182a7e5.json  codemodel-v2-74a1fe7b7cec13376a1b.json  directory-_deps.json-build-Debug-86ddc6ee31677510b2de.json  index-2025-10-02T02-08-57-0413.json  target-antlr4_shared-Debug-29d45ba956cfde594b11.json  target-logotec-Debug-64eda44e48a43c7f684c.json  target-logotec_autogen_timestamp_deps-Debug-cfc1562a770cc74b4c03.json
build-logotec-Desktop-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-848b89e00dd6476916d5.json  directory-_deps.antlr4-build-Debug-e538732c5e8a0aa0cde4.json  directory-_deps.antlr4-build.runtime-Debug-da1b8a69ed1faa43b7a0.json  index-2025-10-02T02-04-47-0195.json  target-antlr4_static-Debug-889764037e07299f40a3.json  target-logotec-Debug-dda788b5fb37e6560274.json  target-logotec_autogen-Debug-13ff23e0c1615d28d705.json
build-logotec-Desktop-Debug/logotec_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-logotec-Desktop-Debug/logotec_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-logotec-Desktop-Debug/logotec_autogen/include/: ui_mainwindow.h
logotec/: .gitignore  CMakeLists.txt  Comandos.txt  Connection.md  LogoTec.md  LogotecGramar.g4  LogotecGramarLexer.cpp  LogotecGramarLexer.h  LogotecGramarListener.cpp  LogotecGramarListener.h  LogotecGramarParser.h  README.md  READNE.md  logotec_gramar.g4  main.lt  main_haz.lt  pruebareal.lt  test.lt
logotec/.antlr/: LogotecGramarBaseListener.cpp  LogotecGramarBaseListener.h  LogotecGramarLexer.cpp  LogotecGramarLexer.h  LogotecGramarLexer.interp  LogotecGramarLexer.tokens  LogotecGramarListener.cpp  LogotecGramarListener.h  LogotecGramarParser.cpp  LogotecGramarParser.h
logotec/out_files/: turtle_hw.cpp  turtle_hw.h
logotec/out_files/ejecutable/: build_script.sh
logotec/out_files/ejecutable/src/: CMakeLists.txt
logotec/out_files/ejecutable/src/src/: turtle_program.h
logotec/out_files/ejecutable/src/src/turtle/: turtlecodegen.h  turtlescene.cpp  turtlescene.h  turtleview.cpp
logotec/out_files/ejecutable/src/src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
logotec/src/: CodeGen.cpp  CodeGen.h  ProcedimientosGen.cpp  ProcedimientosGen.h  SemanticVisitor.cpp  SemanticVisitor.h  SymbolTable.h  TypeChecker.cpp  TypeChecker.h  compile.cpp  compile.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsetreewindow.cpp  parsetreewindow.h  parsetreewindow.ui
logotec/src/turtle/: ino_translator.cpp  ino_translator.h  turtlecodegen.h  turtlescene.cpp  turtlescene.h  turtleview.cpp  turtleview.h
logotec/src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  parsetreewindow.cpp  parsetreewindow.h  parsetreewindow.ui
logotec/src/utils/: coutredirect.h  parseTreeToJson.h  turtlecodegen.h
logotec/test/: CodigoRevision.lt  CodigoRevisionErrores.lt  cuadrado.lt  ejemplo.lt
logotec/test_files/: aritme.lt  ejemplo.lt  funciones.lt  inic.lt  led.lt  pilin.lt  test.lt  test2.lt  test3.lt  test_driver.lt  test_procedimientos.lt
